feat: add tests data for edge case with 1 order in list